--- a/TextNLP_checker/TextNLP_checker.csproj
+++ b/TextNLP_checker/TextNLP_checker.csproj
@@ -10,7 +10,8 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.4" />
-        <PackageReference Include="System.Net.Http.Json" Version="9.0.9" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.4" />
+        <PackageReference Include="System.Net.Http.Json" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
